--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
         <title>Document</title>
     </head> 
     <body>
-    <h1>Odin Recipes</h1>
-
+        <h1>Odin Recipes</h1>
+        <a href="recipes/lasagna.html">Lasagna</a>
 
     </body>
 </html>
