--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
     </head> 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/lasagna.html">Lasagna</a>
+        <ul>
+            <li><a href="recipes/lasagna.html">Lasagna</a></li>
+            <li><a href="recipes/chocolate-protein-balls.html">Chocolate Protein Balls</a></li>
+            <li><a href="recipes/pumpkin-spice-protein-drink.html">Pumpkin Spice Protein Drink</a></li>
+        </ul>
+        
 
     </body>
 </html>
